# apertium-ambiguous

./: .cproject  .project  AUTHORS  BeamSearch.cpp  README  beamResults.txt  biltrans.txt  configure.ac  generate-yasmet-models.sh  kazSentenceTokenizer.rb  lextor.txt  machine-translation  postchunkOut.txt  run_all_files.sh  sentences.txt  test1.txt  testt.out  testtt  training-yasmet.sh  transferFile.t1x  transferOut.txt  weightOut.txt  yasmet
Debug/: makefile  sources.mk
Moses-MT/: WER+PER+BLEU-result.txt  new-ac.txt  new-ad.txt  new-ae.txt  new-af.txt  new-ag.txt  new-ah.txt  new-ai.txt  new-aj.txt  new-moses.txt  new.aa.txt  news-ab.txt
NMT-RBMT/: WER+PER+BLEU.txt  aa-transfer.txt  ab-transfer.txt  ab.sent.txt  ac-transfer.txt  ac.sent.txt  ad-transfer.txt  ad.sent.txt  ae-transfer.txt  ae.sent.txt  af-transfer.txt  af.sent.txt  ag-transfer.txt  ag.sent.txt  ah-transfer.txt  ah.sent.txt  ai-transfer.txt  ai.sent.txt  aj-transfer.txt  aj.sent.txt  new-nmt-pred.txt  pred3.txt  pred7.txt  pred8.txt  smallfile-aa.txt  smallfile-ab.txt  smallfile-ac.txt  smallfile-ad.txt  smallfile-ae.txt  smallfile-af.txt  smallfile-ag.txt  smallfile-ah.txt  smallfile-ai.txt  smallfile-aj.txt  src-aa.txt  src-ab.txt  src-ae.txt  src-af.txt  src-ag.txt  src-aj.txt  (+5 more)
NMT-Test/: pred1.txt  pred10.txt  pred2.txt  pred4.txt  pred5.txt  pred6.txt  pred9.txt  smallfile-aa  smallfile-ac  smallfile-ad  smallfile-ah  smallfile-ai  test10.txt  test2.txt  test4.txt  test5.txt  test6.txt  test8.txt
beam-search/: TranElemLiterals.h  makefile.am
datasets/: 11_+39_+  12_+13_+39_+  16_+64_+  17_+64_+  18_+63_+  1_+39_+  1_+8_+  20_+63_+  21_+64_+  22_+64_+  23_+64_+  24_+64_+  25_+64_+  26_+63_+  28_+39_+  29_+64_+  2_+5_+  2_+5_+39_+  2_+5_+8_+  31_+42_57_+  31_+63_+42_57_+  31_+63_+8_57_+42_57_+  31_+8_57_+42_57_+  32_+63_+  35_+36_+39_+  38_+39_+  39_+45_+46_+  39_+49_+  39_+50_+  39_+50_+73_+  39_+54_+  39_+72_+  3_+8_+  40_+63_+  43_+63_+  44_+64_+  4_+8_+  50_+73_+  51_+63_+  52_+63_+  (+34 more)
kazakh-training/: Bleu-Result  Evaluation-result-WER-PER  analysis.txt  apertium-transfer.txt  beam-transfer1.txt  best-random.txt  edited.txt  kaz-test  kaz-örnekleri.txt  lextor.txt  lm.txt  model-transfer.txt  model-weights.txt  model.weights.txt  models-merge  new-reference-for -NMT-SMT-RBMT.txt  nmt-pred.txt  reference.txt  source.txt  unweighted.txt  weighted.txt
m4/: ax_check_icu.m4
models/: 11_+39_+.model  12_+13_+.model  12_+13_+39_+.model  16_+64_+.model  17_+64_+.model  18_+63_+.model  1_+39_+.model  1_+8_+.model  20_+63_+.model  21_+64_+.model  22_+64_+.model  23_+64_+.model  24_+64_+.model  25_+64_+.model  26_+63_+.model  28_+39_+.model  29_+64_+.model  2_+5_+.model  2_+5_+39_+.model  2_+5_+8_+.model  31_+42_57_+.model  31_+63_+42_57_+.model  31_+63_+8_57_+42_57_+.model  31_+8_57_+42_57_+.model  32_+63_+.model  33_+34_+.model  35_+36_+.model  35_+36_+39_+.model  38_+39_+.model  39_+45_+46_+.model  39_+49_+.model  39_+50_+.model  39_+50_+73_+.model  39_+54_+.model  39_+72_+.model  3_+8_+.model  40_+63_+.model  43_+63_+.model  44_+64_+.model  45_+46_+.model  (+40 more)
results/: interchunkOut.txt  test2.txt
rules-applier/: CLExec.h  RulesApplier.cpp  makefile.am
scripts/: exampleken1.py  kenlm.pyx  score-sentences-new.py  score-sentences.py  sentenceTokenizer.rb  spcCharsRem.rb
spa-eng-testing/: Bleu-result.txt  WER+PER+bad-test-sentences.txt  WER+PER-Result.txt  b1-transfer.txt  b2-transfer.txt  b3-transfer.txt  b4-transfer.txt  eng-random.txt  eng-sentences.edit.txt  eng-tlm.txt  eng-unweighted.txt  eng-weighted.txt  lextor.txt  new-wer-per-result.txt  result.txt  spa-src.txt  src.txt  tgt.txt  unweighted.txt
src/: BeamResult.cpp  BeamSearch.cpp  BestLangMod.cpp  CLExec.cpp  CLExec.h  CombAlign.cpp  LangModAnalysis.cpp  Main.cpp  Makefile.am  ModelResult.cpp  OrderAmbigSents.cpp  RuleExecution.cpp  RuleExecution.h  RuleParser.cpp  RuleParser.h  RulesApplier.cpp  TranElemLiterals.h  YasmetFormatter.cpp
yasmet/: makefile.am
yasmet-formatter/: RuleParser.cpp  makefile.am
(+86 files in other folders)
